
TODO:
	show MIDI length in seconds.
	TextTrackWriter
	FingeringNavigator
		run with constraints



2017.9.15	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: added tree dump.

	+	Pianist/FingeringNavigator: evaluateChordStaticCost implemented.


2017.9.14	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Fingering: HandConfig.getFingerChordWristRange implemented.


2017.9.13	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added progress bar.

	+	Pianist/FingeringNavigator: output result implemented.

	+	Pianist/FingeringNavigator: getFingerChoices implemented.


2017.9.12	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Piano: KeyPositions added.


2017.9.12	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Piano.cs: created.


2017.9.7	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/FingeringNavigator: added estimated costs.

	+	Pianist/FingeringNavigator: added choice sequence.


2017.9.6	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Fingering: FingerConstants added.

	+	Pianist/FingeringNavigator: TreeNode class added.


2017.9.5	K.L.	<k.l.lambda@gmail.com>

	+	Pianist/Notation: NoteSequence added.

	+	NotationUtils: appendFingeringToMidiFile implemented.

	+	FingeringGenerator: added hand and track configs.

	+	HandConfigLibrary.cs created.


2017.9.4	K.L.	<k.l.lambda@gmail.com>

	+	NotationUtils.cs created.

	*	Fingering Navigator: heuristic breadth first search.

	+	Pianist/FingeringNavigator.cs: created.

	+	Pianist/Fingering.cs: created.
	+	Pianist/Notation.cs: created.


2017.8.31	K.L.	<k.l.lambda@gmail.com>

	>	FingeringGenerator: fixed signature text.


2017.8.30	K.L.	<k.l.lambda@gmail.com>

	+	FingeringGenerator: added method of clear.
	+	FingeringGenerator: added note field in marker.

	+	FingeringGenerator: added random marker sample.

	+	FingeringGeneratorEditor: generate pipeline added.

	+	FingeringGenerator: MIDI load implemented.
	+	FingeringGenerator: created.


2017.8.29	K.L.	<k.l.lambda@gmail.com>

	+	HandController: gear linkages implemented.

