@@ -9,6 +9,8 @@ TODO:
 
 2017.9.15	K.L.	<k.l.lambda@gmail.com>
 
+	+	Pianist/FingeringNavigator: refined structure.
+
 	+	FingeringGenerator: added tree dump.
 
 	+	Pianist/FingeringNavigator: evaluateChordStaticCost implemented.
